Change contact form background to be dark in dark mode Fixes #387

--- a/css/dark.css
+++ b/css/dark.css
@@ -172,7 +172,8 @@ input[type=text], select, textarea {
     box-sizing: border-box; /* Make sure that padding and width stays in place */
     margin-top: 6px; /* Add a top margin */
     margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+    resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+    background-color: #000000; /* Otherwise white text on white background is illegible */
 }
 
 /* Style the submit button with a specific background color etc */
